Improve code design.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
 name: StrikeFriendlyFire
 version: '${project.version}'
 main: dev.iiahmed.strikefriendlyfire.StrikeFriendlyFire
-depend: [ StrikePractice, PlaceholderAPI ]
+depend:
+  - StrikePractice
+  - PlaceholderAPI
 description: Friendly Fire Parties in FFA
